--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 
-name: Deploy to GitHub Pages
+name: veggie-order-magic
 
 on:
   push:
@@ -42,6 +42,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
+      - name: veggie-order-magic
         id: deployment
         uses: actions/deploy-pages@v1
